--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
-<script src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script src="https://mern-simple-chat.herokuapp.com/socket.io/socket.io.js"></script>
 <script>
 $(() => {
     $("#send").click(()=>{
