history logs added

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
 </head>
 <body>
+    <label for="userName">Eneter you name:</label>
     <input type="text" id="userName" name="userName">
-    <a class="btn btn-primary" id="goToRooms">go to rooms</a>
+    <a class="btn btn-primary" id="goToRooms">Go to rooms</a>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
 <script src="https://mern-simple-chat.herokuapp.com/socket.io/socket.io.js"></script> 
